# BQDrift

./: Cargo.toml  PLAN.md  README.md
queries/analytics/: daily_user_stats.v1.sql  daily_user_stats.v2.r1.sql  daily_user_stats.v2.sql  daily_user_stats.v3.sql  daily_user_stats.yaml
src/: error.rs  lib.rs
src/diff/: mod.rs
src/drift/: audit.rs  checksum.rs  detector.rs  immutability.rs  mod.rs  state.rs
src/dsl/: dependencies.rs  loader.rs  mod.rs  parser.rs  preprocessor.rs  resolver.rs  validator.rs
src/error/: bq_error.rs  mod.rs  parser.rs
src/executor/: bq_executor.rs  client.rs  mod.rs  partition_writer.rs  runner.rs  scratch.rs
src/invariant/: checker.rs  mod.rs  result.rs  types.rs
src/migration/: mod.rs  tracker.rs
src/repl/: README.md  commands.rs  interactive.rs  manager.rs  mod.rs  protocol.rs  server.rs  session.rs
src/schema/: cluster.rs  field.rs  mod.rs  partition.rs  table.rs
tests/: cli_partition_tests.rs  drift_tests.rs  dsl_tests.rs  schema_tests.rs
tests/fixtures/analytics/: query_with_invariants.yaml  simple_query.v1.sql  simple_query.yaml  versioned_query.v1.sql  versioned_query.v2.r1.sql  versioned_query.v2.sql  versioned_query.v3.sql  versioned_query.v4.sql  versioned_query.yaml
