[package]
name = "bqdrift"
version = "0.1.0"
edition = "2021"
description = "BigQuery schema versioning, partition management, and OLAP query orchestration"
license = "MIT OR Apache-2.0"
authors = ["Alex Choi"]
repository = "https://github.com/alexchoi0/BQDrift"

[[bin]]
name = "bqdrift"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
gcp-bigquery-client = "0.27"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
glob = "0.3"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
flate2 = "1"
base64 = "0.22"
sqlparser = { version = "0.53", features = ["visitor"] }

[dev-dependencies]
tokio-test = "0.4"
